# HypercubeHopfield

./: .gitignore  CLAUDE.md  CMakeLists.txt  Diagnostics.h  HopfieldNetwork.cpp  HopfieldNetwork.h  README.md  main.cpp
.github/workflows/: wheels.yml
diagnostics/: CapacityProbe.h  CapacityProbe.md  DiagnosticHelpers.h  Diagnostics.h  EnergyMonotonicity.h  EnergyMonotonicity.md  NoiseRecall.h  NoiseRecall.md  OverlapMetrics.h  OverlapMetrics.md  ParameterSweep.h
docs/: CPP_SDK.md  FutureWork.md  HopfieldNetwork.md  Python_SDK.md
examples/: AutoAssociativeDemo.cpp  AutoAssociativeDemo.md  HeteroAssociativeDemo.cpp  HeteroAssociativeDemo.md
python/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
python/hypercube_hopfield/: __init__.py
python/tests/: test_basic.py
